# free-ebiis

./: .gitignore  app.py  pyproject.toml  readme.md
static/: styles.css
templates/: index.html  layout.html  location.html
